--- a/package.json
+++ b/package.json
@@ -48,19 +48,22 @@
   "dependencies": {
     "axios": "0.18.0",
     "connected-react-router": "5.0.1",
-    "crassa": "0.5.7",
+    "crassa": "0.6.3",
     "extensible-duck": "1.4.0",
     "history": "4.7.2",
     "react": "16.6.3",
     "react-dom": "16.6.3",
     "react-helmet": "5.2.0",
+    "react-helmet-async": "0.2.0",
     "react-hot-loader": "4.3.12",
     "react-redux": "5.1.1",
     "react-router": "4.3.1",
     "react-router-dom": "4.3.1",
     "redux": "4.0.1",
     "redux-logger": "3.0.6",
-    "redux-saga": "0.16.2"
+    "redux-saga": "0.16.2",
+    "socket.io": "2.2.0",
+    "socket.io-client": "2.2.0"
   },
   "devDependencies": {
     "redux-devtools": "3.4.2",
